# motorhead

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  selfdependent.py
.github/workflows/: build-docs.yml  linters.yml  tests.yml
api-bound-method-wrapper/: index.html
api-delete-rule/: index.html
api-model-deleteresultmodel/: index.html
api-model-document/: index.html
api-model-objectid/: index.html
api-model-utcdatetime/: index.html
api-operator/: index.html
api-query/: index.html
api-service/: index.html
api-typing/: index.html
api-validator/: index.html
api/aggregation/: index.html
api/bound-method-wrapper/: index.html
api/delete-rule/: index.html
api/model/deleteresultmodel/: index.html
api/model/document/: index.html
api/model/objectid/: index.html
api/model/utcdatetime/: index.html
api/operator/: index.html
api/query/: index.html
api/service/: index.html
api/typing/: index.html
api/validator/: index.html
docs/: api-bound-method-wrapper.md  api-delete-rule.md  api-model-deleteresultmodel.md  api-model-document.md  api-model-objectid.md  api-model-utcdatetime.md  api-model.md  api-operator.md  api-query.md  api-service.md  api-typing.md  api-validator.md  fastapi-example.md  index.md
docs/api/: aggregation.md  bound-method-wrapper.md  delete-rule.md  operator.md  query.md  service.md  typing.md  validator.md
docs/api/model/: deleteresultmodel.md  document.md  objectid.md  utcdatetime.md
fastapi-example/: index.html
motorhead/: __init__.py  aggregation.py  bound_method_wrapper.py  delete_rule.py  operator.py  query.py  service.py  typing.py  validator.py
motorhead/model/: __init__.py  deleteresultmodel.py  document.py  objectid.py  utcdatetime.py
search/: search_index.json
tests/: conftest.py  database_fixture.py  docker-compose.yml  test_aggregation.py  test_operator.py  test_query.py  test_service.py
tests/fixtures/: database_fixture.py  event_loop_fixture.py
tests/model/: test_utcdatetime.py
tree_app/: api.py  app.py  main.py  model.py  service.py
